--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "prisma migrate deploy",
     "start": "nodemon index.js"
   },
   "keywords": [],
